# cppGOLikeContext

./: .gitignore  CMakeCPack.cmake  CMakeLists.txt  Dockerfile.devel  Dockerfile.package  LICENSE  Makefile  README.md  runClangFormat.sh  setup.py
.devcontainer/: devcontainer.json
cmake/: Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/context/: background.hpp  context.hpp  contextFactory.hpp  createContext.hpp  todo.hpp  withCancel.hpp  withDeadline.hpp  withValue.hpp
include/utils/: customExceptions.hpp
src/: CMakeLists.txt  __init__.py  main.cpp  module.cpp
src/context/: CMakeLists.txt  background.cpp  context.cpp  contextFactory.cpp  createContext.cpp  todo.cpp  withCancel.cpp  withDeadline.cpp  withValue.cpp
src/utils/: CMakeLists.txt  customExceptions.cpp
test/: CMakeLists.txt
test/context/: CMakeLists.txt  combinedTest.cpp  tbackground.cpp  tcontext.cpp  tcontextFactory.cpp  ttodo.cpp  twithCancel.cpp  twithDeadline.cpp  twithValue.cpp
test/utils/: CMakeLists.txt  tcustomExceptions.cpp
